--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,13 +13,12 @@ documentation = "https://astropenguin.github.io/azely/"
 [tool.poetry.dependencies]
 python = ">=3.9, <3.12"
 astropy = "^5.0"
+dateparser = "^1.1"
+ipinfo = "^4.4"
 pandas = "^1.5 | ^2.0"
 pandas-stubs = "^1.5 | ^2.0"
-python-dateutil = "^2.8"
-pytz = "^2023.3"
 timezonefinder = "^6.2"
 tomlkit = "^0.12"
-ipinfo = "^4.4"
 
 [tool.poetry.dev-dependencies]
 black = "^23.7"
